新增：增加google analytics與調整部分css

--- a/design.html
+++ b/design.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/design.css">
     <script src="js/fontawesome-all.js"></script>
     <title>Jerry Portfolio-Design</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N0N5SG9CNG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-N0N5SG9CNG');
+    </script>    
 </head>
 
 <body>
