--- a/ui-sample.html
+++ b/ui-sample.html
@@ -8,121 +8,156 @@
     <title>UI-Sample</title>
     <link rel="stylesheet" href="css/uiView.css">
     <script src="js/fontawesome-all.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N0N5SG9CNG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-N0N5SG9CNG');
+    </script>
 </head>
 
 <body>
-    <div class="ui-view-banner">
-        <div class="ui-view-left">
-            <div class="ui-goBack-button">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                <p>回首頁</p>
-            </div>
-            <div class="ui-banner-content">
-                <h3>2022年 虎躍新程</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reiciendis sint repellat tenetur vero? Assumenda adipisci numquam consequatur distinctio temporibus sequi sit quidem quos. Omnis id enim in excepturi! Ducimus?</p>
-                <ul>
-                    <li>
-                        <h4>使用工具</h4>
-                        <p>Adobe XD、Adobe Illustrator、Photoshop</p>
-                    </li>
-                    <li>
-                        <h4>參與部分</h4>
-                        <p>UI/UX Design、視覺版面設計、網頁開發</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="ui-view-right"></div>
-    </div>
-    <div class="ui-view-research">
-        <div class="ui-research-block">
-            <h4>研究與討論</h4>
-            <div class="ui-research-content">
-                <ul>
-                    <li>
-                        <h5>起初</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti distinctio tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam nostrum ipsam natus deleniti quos repellendus
-                            soluta.
-                        </p>
-                    </li>
-                    <li>
-                        <h5>期望</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti distinctio tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam nostrum ipsam natus deleniti quos repellendus
-                            soluta.
-                        </p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="ui-view-design">
-        <div class="ui-design-block">
-            <h4>設計發想</h4>
-            <div class="ui-design-content">
-                <ul>
-                    <li>
-                        <h5>發想</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti distinctio tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam nostrum ipsam natus deleniti quos repellendus
-                            soluta.
-                        </p>
-                    </li>
-                    <li>
-                        <h5>設計定義與方向</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti distinctio tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam nostrum ipsam natus deleniti quos repellendus
-                            soluta.
-                        </p>
-                    </li>
-                    <li>
-                        <h5>設計與原型</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti distinctio tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam nostrum ipsam natus deleniti quos repellendus
-                            soluta.
-                        </p>
-                    </li>
-                </ul>
-                <div class="ui-design-prototype" style="height:100vh;">
-                    <img src="image/ui/2022-1.png" alt="">
-                    <img src="image/ui/2022-mobile.png" alt="">
-                    <img src="image/ui/2022-2.png" alt="">
+    <div class="ui-test">
+        <div class="ui-view-banner">
+            <div class="ui-view-left">
+                <div class="ui-goBack-button">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    <p>回首頁</p>
                 </div>
-                <div class="ui-design-prototype-learnmore">
-                    <p>
-                        看更多畫面
-                    </p>
+                <div class="ui-banner-content">
+                    <h3>2022年 虎躍新程</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi reiciendis sint repellat tenetur
+                        vero?
+                        Assumenda adipisci numquam consequatur distinctio temporibus sequi sit quidem quos. Omnis id
+                        enim in
+                        excepturi! Ducimus?</p>
+                    <ul>
+                        <li>
+                            <h4>使用工具</h4>
+                            <p>Adobe XD、Adobe Illustrator、Photoshop</p>
+                        </li>
+                        <li>
+                            <h4>參與部分</h4>
+                            <p>UI/UX Design、視覺版面設計、網頁開發</p>
+                        </li>
+                    </ul>
                 </div>
-
+            </div>
+            <div class="ui-view-right"></div>
+        </div>
+        <div class="ui-view-research">
+            <div class="ui-research-block">
+                <h4>研究與討論</h4>
+                <div class="ui-research-content">
+                    <ul>
+                        <li>
+                            <h5>起初</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti
+                                distinctio
+                                tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam
+                                nostrum ipsam natus deleniti quos repellendus
+                                soluta.
+                            </p>
+                        </li>
+                        <li>
+                            <h5>期望</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti
+                                distinctio
+                                tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam
+                                nostrum ipsam natus deleniti quos repellendus
+                                soluta.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="ui-view-focus">
-        <div class="ui-focus-block">
-            <h4>設計重點</h4>
-            <div class="ui-focus-content">
-                <ul>
-                    <!--  -->
-                    <li>
-                        <h5>發想</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti distinctio tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam nostrum ipsam natus deleniti quos repellendus
-                            soluta.
+        <div class="ui-view-design">
+            <div class="ui-design-block">
+                <h4>設計發想</h4>
+                <div class="ui-design-content">
+                    <ul>
+                        <li>
+                            <h5>發想</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti
+                                distinctio
+                                tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam
+                                nostrum ipsam natus deleniti quos repellendus
+                                soluta.
+                            </p>
+                        </li>
+                        <li>
+                            <h5>設計定義與方向</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti
+                                distinctio
+                                tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam
+                                nostrum ipsam natus deleniti quos repellendus
+                                soluta.
+                            </p>
+                        </li>
+                        <li>
+                            <h5>設計與原型</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti
+                                distinctio
+                                tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam
+                                nostrum ipsam natus deleniti quos repellendus
+                                soluta.
+                            </p>
+                        </li>
+                    </ul>
+                    <div class="ui-design-prototype" style="height:100vh;">
+                        <img src="image/ui/2022-1.png" alt="">
+                        <img src="image/ui/2022-mobile.png" alt="">
+                        <img src="image/ui/2022-2.png" alt="">
+                    </div>
+                    <div class="ui-design-prototype-learnmore">
+                        <p>
+                            看更多畫面
                         </p>
-                        <div class="ui-focus-content">
-                            <div class="ui-focus-images ui-focus-old">
-                                <h6>Before</h6>
-                                <img src="image/ui/old-login.png" alt="">
-                            </div>
-                            <div class="ui-focus-images ui-focus-new">
-                                <h6>After</h6>
-                                <img src="image/ui/new-login.png" alt="">
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                    </div>
 
+                </div>
             </div>
         </div>
 
-    </div>
+        <div class="ui-view-focus">
+            <div class="ui-focus-block">
+                <h4>設計重點</h4>
+                <div class="ui-focus-content">
+                    <ul>
+                        <!--  -->
+                        <li>
+                            <h5>發想</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, culpa atque corrupti
+                                distinctio
+                                tempora reprehenderit pariatur nam labore consequuntur excepturi expedita officiis totam
+                                nostrum ipsam natus deleniti quos repellendus
+                                soluta.
+                            </p>
+                            <div class="ui-focus-content">
+                                <div class="ui-focus-images ui-focus-old">
+                                    <h6>Before</h6>
+                                    <img src="image/ui/old-login.png" alt="">
+                                </div>
+                                <div class="ui-focus-images ui-focus-new">
+                                    <h6>After</h6>
+                                    <img src="image/ui/new-login.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <h4>Prototype</h4>
+                <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FuCfiiO5SL0hXxwSZYlFBBk%2FAlex-portfolio%3Fpage-id%3D4%253A50%26node-id%3D6%253A51%26viewport%3D1130%252C744%252C0.75%26scaling%3Dscale-down%26starting-point-node-id%3D6%253A51" allowfullscreen></iframe> -->
+                <iframe width="100%" height="800"
+                    src="https://xd.adobe.com/embed/952955ee-cf6b-424b-b886-c4792829afe7-c07a/" frameborder="0"
+                    allowfullscreen></iframe>
+
+            </div>
+        </div>
     </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
