更新：優化我的自我介紹與icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="image/j_icon.ico">
     <script src="js/fontawesome-all.js"></script>
     <title>Jerry Portfolio</title>
     <!-- Google tag (gtag.js) -->
@@ -78,13 +79,8 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">
-                                            <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師溝通配合與學習。</p>
-                                            <p>在過去的工作中，我運用Adobe
-                                                XD、Figma、Zeplin設計Mockup、
-                                                Prototype討論網站與產品的介面設計，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
-                                            <p>而我也經常與行銷部門等配合運用Adobe
-                                                Illustrator、Photoshop製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google
-                                                Analytics做網站分析幫助他們追蹤數據</p>
+                                            <p>我是一名UI/UX設計師與前端工程師，擁有多年就業經驗。曾在RD部門負責設計網站和產品的介面設計，以及使用HTML、CSS、JavaScript和jQuery等技術進行介面和功能開發。我擅長使用Mockup和Prototype以便與團隊進行介面設計討論，並且能夠運用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和電子郵件。</p>
+                                            <p>在過去的工作中，我曾與行銷/業務等部門協作優化SEO和架構、設計平面廣告和電子郵件，並導入Google Analytics等工具分析網站數據，為行銷團隊提供更多的決策支持。我相信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我經常學習和更新自己的技能，以提供最佳的服務和價值</p>                                           
                                         </td>
                                     </tr>
                                 </table>
@@ -294,35 +290,35 @@
                         <li class="active" data-item="develop">
                             <a href="design.html#menu2">
                                 <h5>開發</h5>
-                                <p>開發網站的描述開發網站的描述</p>
+                                <p>創造網站互動體驗與功能</p>
                                 <img src="image/icon/arrow-right.svg" alt="">
                             </a>
                         </li>
                         <li data-item="ui">
                             <a href="design.html#menu3">
                                 <h5>介面設計</h5>
-                                <p>開發網站的描述開發網站的描述</p>
+                                <p>設計人機互動介面，提升用戶體驗和品牌價值</p>
                                 <img src="image/icon/arrow-right.svg" alt="">
                             </a>
                         </li>
                         <li data-item="graphicDesign">
                             <a href="design.html#menu4">
                                 <h5>平面設計</h5>
-                                <p>開發網站的描述開發網站的描述</p>
+                                <p>製作高品質平面廣告，吸引潛在客戶和提高品牌曝光率</p>
                                 <img src="image/icon/arrow-right.svg" alt="">
                             </a>
                         </li>
                         <li data-item="edm">
                             <a href="design.html#menu6">
                                 <h5>電子報EDM</h5>
-                                <p>開發網站的描述開發網站的描述</p>
+                                <p>創作有吸引力的電子報，增加開信率並提升業務轉換率</p>
                                 <img src="image/icon/arrow-right.svg" alt="">
                             </a>
                         </li>
                         <li class="portfolio-design-button">
                             <a href="design.html">
                                 <h5>看全部資訊</h5>
-                                <p>開發網站的描述開發網站的描述</p>
+                                <p>看以上的全部資訊</p>
                                 <img src="image/icon/arrow-right.svg" alt="">
                             </a>
                         </li>
