--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">
-                                            <p>我是一名UI/UX設計師與前端工程師，擁有多年就業經驗。曾在RD部門負責設計網站和產品的介面設計，以及使用HTML、CSS、JavaScript和jQuery等技術進行介面和功能開發。我擅長使用Mockup和Prototype以便與團隊進行介面設計討論，並且能夠運用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和電子郵件。</p>
+                                            <p>我是一名UI/UX設計師與前端工程師，擁有多年就業經驗。曾在RD部門負責設計網站和產品軟體的介面設計，以及使用HTML、CSS、JavaScript和jQuery等技術進行介面和功能開發。我擅長使用Wireframe和Prototype以便與團隊進行介面設計討論，並且能夠運用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和ICON。</p>
                                             <p>在過去的工作中，我曾與行銷/業務等部門協作優化SEO和架構、設計平面廣告和電子郵件，並導入Google Analytics等工具分析網站數據，為行銷團隊提供更多的決策支持。我相信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我經常學習和更新自己的技能，以提供最佳的服務和價值</p>                                           
                                         </td>
                                     </tr>
@@ -113,6 +113,15 @@
                                         <p class="resume-date">
                                             2022.06 -
                                         </p>
+                                        <div class="resume-content">
+                                            <p>。多個系統產品的Redesign ＆ UI Prototype設計</p>
+                                            <p>。多個系統的UX使用者體驗研究與探討</p>
+                                            <p>。新產品Mobile APP Prototype設計</p>
+                                            <p>。多個產品的Flow Chart製作</p>
+                                            <p>。產品Logo發想與製作設計</p>
+                                            <p>。公司平面的Banner與ICON製作</p>
+                                            <p>。系統前端開發製作</p>
+                                        </div>
                                     </div>
                                 </li>
                                 <li>
