更新：prototype新增與文字調整調整

--- a/design.html
+++ b/design.html
@@ -171,7 +171,21 @@
             </div>
             <div class="portfolio-prototype-block">
                 <!--  -->
-                <div class="portfolio-prototype-card portfolio-prototype-card11" data-item="web,mobile">
+                <div class="portfolio-prototype-card portfolio-prototype-card12" data-item="web,mobile">
+                    <img src="image/ui/Portfolio.png" alt="">
+                    <div class="portfolio-prototype-text">
+                        <div class="portfolio-prototype-header-block">
+                            <h5>Portfolio</h5>
+                            <a target="_blank"
+                                href="https://www.figma.com/proto/uCfiiO5SL0hXxwSZYlFBBk/Alex-portfolio?page-id=4%3A50&node-id=6-51&viewport=581%2C317%2C0.34&scaling=min-zoom&starting-point-node-id=6%3A51">
+                                <img src="image/icon/iconFigmaVector.png">
+                            </a>
+                        </div>
+                        <p>精心為朋友打造，充滿靈感與技術的程式作品集，展現他的創造力與解決問題的能力。</p>
+                    </div>
+                </div>                
+                <!--  -->
+                <div class="portfolio-prototype-card portfolio-prototype-card11" data-item="web">
                     <img src="image/ui/The_F2E.png" alt="">
                     <div class="portfolio-prototype-text">
                         <div class="portfolio-prototype-header-block">
@@ -181,11 +195,11 @@
                                 <img src="image/icon/iconFigmaVector.png">
                             </a>
                         </div>
-                        <p>利用有點3D的視差感，搭配星球的元素設計，還有像素的字體搭配來呈現這個網頁。</p>
+                        <p>以3D視差感、星球元素設計和像素字體，搭配豐富的圖像和文本，呈現出獨具特色的網頁設計。</p>
                     </div>
                 </div>
                 <!--  -->
-                <div class="portfolio-prototype-card portfolio-prototype-card1" data-item="web">
+                <div class="portfolio-prototype-card portfolio-prototype-card1" data-item="web,software">
                     <img src="image/ui/2023ERMA.png" alt="">
                     <div class="portfolio-prototype-text">
                         <div class="portfolio-prototype-header-block">
@@ -195,7 +209,7 @@
                             <img src="image/icon/iconFigmaVector.png">
                         </a>
                         </div>
-                        <p>公司建立了一個新的企業級系統與App，是描述一個邁向低程式碼開發的產品，因此討論網站架構與Mockup。</p>
+                        <p>ERMA客戶服務維修系統進行重新設計，提供更好的使用體驗，吸引更多人造訪。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -209,11 +223,11 @@
                                 <img src="image/icon/adobeXD.png">
                             </a>
                         </div>
-                        <p>向外擴展，公司邁向國際發展的網站，目的是希望更讓國外客戶認識我們。</p>
+                        <p>公司擴展國際市場，打造國際化網站，旨在吸引更多國外客戶，讓更多人認識我們。</p>
                     </div>
                 </div>
                 <!--  -->
-                <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web">
+                <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web,mobile">
                     <img src="image/ui/2022newyear-prototype.png" alt="">
                     <div class="portfolio-prototype-text">
                         <div class="portfolio-prototype-header-block">
@@ -223,17 +237,17 @@
                             <img src="image/icon/adobeXD.png">
                         </a>
                         </div>
-                        <p>是一個虎年要歲序更新，感謝大家過去一年來的鼓勵與相挺，祝福各位虎躍新程與虎哩賺大錢！的版面。</p>
+                        <p>是虎年為了感謝客戶一直以來的信任與支持，祝福新年快樂，因此特別設計，準備了一個獨特的版面。</p>
                     </div>
                 </div>
                 <!--  -->
-                <div class="portfolio-prototype-card portfolio-prototype-card4" data-item="web">
+                <div class="portfolio-prototype-card portfolio-prototype-card4" data-item="web,mobile">
                     <img src="image/ui/2020newyear-prototype.png" alt="">
                     <div class="portfolio-prototype-text">
                         <div class="portfolio-prototype-header-block">
                             <h5>2020年 鼠年大吉</h5>
                         </div>
-                        <p>是鼠年要祝福“鼠”年祝賀與期盼繼續給予支持與建議的版面設計規劃需求。</p>
+                        <p>是鼠年為了感謝客戶一直以來的信任與支持，祝福新年快樂，因此特別設計，準備了一個獨特的版面。。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -243,11 +257,11 @@
                         <div class="portfolio-prototype-header-block">
                             <h5>牛小棧</h5>
                         </div>
-                        <p>因為之前有配合賣牛肉麵的店家，想推廣跟更認識他們，所以發想創建牛肉麵的網站設計。</p>
+                        <p>為推廣合作的牛肉麵店家，我們創建了一個網站，呈現牛肉麵的魅力，提供店家資訊與活動訊息。</p>
                     </div>
                 </div>
                 <!--  -->
-                <div class="portfolio-prototype-card portfolio-prototype-card6" data-item="web,mobile">
+                <div class="portfolio-prototype-card portfolio-prototype-card6" data-item="software,mobile">
                     <img src="image/ui/2020login-reddesign.png" alt="">
                     <div class="portfolio-prototype-text">
                         <div class="portfolio-prototype-header-block">
