2024更新作品集資訊
2024更新作品集資訊

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="bannet-text-block">
                     <h4>Hello</h4>
                     <div class="portfolio-block">
-                        <p>我是Jerry沈俊宏！一位網頁設計跨入寫網頁程式的的設計師</p>
+                        <p>我是Jerry沈俊宏！一位UI/UX跨入寫程式的的設計師</p>
                         <div class="portfolio-individual">
                             <div class="portfolio-language">
                                 <table>
@@ -71,7 +71,7 @@
                                     </tr>
                                     <tr>
                                         <td>出生日期：</td>
-                                        <td>1991/11/26</td>
+                                        <td>1991/11</td>
                                     </tr>
                                     <tr>
                                         <td>自我介紹：</td>
@@ -79,8 +79,10 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">
-                                            <p>我是一名UI/UX設計師與前端工程師，擁有多年就業經驗。曾在RD部門負責設計網站和產品軟體的介面設計，以及使用HTML、CSS、JavaScript和jQuery等技術進行介面和功能開發。我擅長使用Wireframe和Prototype以便與團隊進行介面設計討論，並且能夠運用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和ICON。</p>
-                                            <p>在過去的工作中，我曾與行銷/業務等部門協作優化SEO和架構、設計平面廣告和電子郵件，並導入Google Analytics等工具分析網站數據，為行銷團隊提供更多的決策支持。我相信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我經常學習和更新自己的技能，以提供最佳的服務和價值</p>                                           
+                                            <p>我是一名UI/UX設計師與前端工程師，擁有豐富的工作經驗。</p>
+                                            <p>目前在設計部門擔任職務，之前曾在RD部門，負責協助完成多個系統軟體、APP和官網的UI/UX設計改版與優化。同時，我參與了前端版面的開發，運用HTML、CSS、JavaScript、JQuery、Vue3、MVC等技術進行功能開發。與RD、PM、行銷、Sales、支援技術等部門保持緊密合作完成專案。</p>
+                                            <p>我的專業技能包括使用Wireframe和Prototype進行與團隊的設計討論，並應用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和ICON。過去的工作經驗中，我與行銷和業務等部門合作優化SEO和架構，負責設計平面廣告和電子郵件。我還導入Google Analytics等工具分析網站數據，為行銷團隊提供決策支持。深信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我不斷學習和更新技能，以提供最佳的服務和價值。</p>
+                                            <p>近期，我加入了使用AI工具（如ChatGPT、Stable Diffusion等），以提高工作效率和準確性。這項技術的應用進一步展現了我的求知態度和對於前瞻性科技的熱忱。期望能將這些經驗和技能帶到新的挑戰中，為公司創造更卓越的設計和卓越的用戶體驗。</p>                                         
                                         </td>
                                     </tr>
                                 </table>
@@ -120,7 +122,7 @@
                                             <p>。多個產品的Flow Chart製作</p>
                                             <p>。產品Logo發想與製作設計</p>
                                             <p>。公司平面的Banner與ICON製作</p>
-                                            <p>。系統前端開發製作</p>
+                                            <p>。多個系統前端開發製作，含不同尺寸的調整</p>
                                         </div>
                                     </div>
                                 </li>
@@ -135,6 +137,7 @@
                                         </p>
                                         <div class="resume-content">
                                             <p>。公司多國官網與產品的UI Prototype設計</p>
+                                            <p>。公司的Mobile產品改版設計並且開發</p>
                                             <p>。公司網站的開發與優化更新(含RWD)</p>
                                             <p>。EDM電子報的版面設計與開發製作</p>
                                             <p>。Banner設計＆Icon設計製作</p>
@@ -169,20 +172,10 @@
                                 <li>
                                     <div class="resume-div">
                                         <p class="resume-Title">
-                                            基隆市二信高級中學附設高職部 - 廣告設計科
+                                            基隆市二信高級中學附設高職部 - 廣設科
                                         </p>
                                         <p class="resume-date">
                                             2007.09 - 2010.06
-                                        </p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="resume-div">
-                                        <p class="resume-Title">
-                                            基隆市輔大聖心高級中學附設國中部
-                                        </p>
-                                        <p class="resume-date">
-                                            2004.09 - 2007.06
                                         </p>
                                     </div>
                                 </li>
@@ -262,7 +255,32 @@
                                     <p>JQuery</p>
                                     <progress value="75" max="100"></progress>
                                 </div>
-                            </li>
+                                <div class="resume-progress">
+                                    <p>Vue3</p>
+                                    <progress value="70" max="100"></progress>
+                                </div>
+                            </li>                      
+                        </ul>
+                    </div>
+                    <div class="resume-block resume-block-skill">
+                        <ul>                           
+                            <!-- 一個卡 -->
+                            <li class="resume-card">
+                                <h4>運用AI</h4>
+                                <div class="resume-progress">
+                                    <p>ChatGPT</p>
+                                    <progress value="70" max="100"></progress>
+                                </div>
+                                <div class="resume-progress">
+                                    <p>Microsoft Bing</p>
+                                    <progress value="70" max="100"></progress>
+                                </div>
+                                <div class="resume-progress">
+                                    <p>Stable Diffusion圖像生成模型
+                                    </p>
+                                    <progress value="70" max="100"></progress>
+                                </div>
+                            </li>                                
                             <!-- 一個卡 -->
                             <li class="resume-card">
                                 <h4>行銷</h4>
@@ -284,10 +302,11 @@
                                     </p>
                                     <progress value="70" max="100"></progress>
                                 </div>
-                            </li>
+                            </li>                        
                         </ul>
                     </div>
                 </div>
+                
             </div>
         </div>
         <div class="portfolio-design-area section" id="menu3">
