再次修正design頁面的排版與內容的更新，與更新專案內容

--- a/design.html
+++ b/design.html
@@ -63,6 +63,7 @@
                             <li class="portfolio-prototype-menu2" onclick='changePrototypeData("web")'>網頁</li>
                             <li class="portfolio-prototype-menu3" onclick='changePrototypeData("software")'>軟體</li>
                             <li class="portfolio-prototype-menu4" onclick='changePrototypeData("mobile")'>Mobile</li>
+                            <li class="portfolio-prototype-menu4" onclick='changePrototypeData("project")'>整理專案</li>
                         </ul>
                     </div>
                     <div class="portfolio-prototype-block">
@@ -123,7 +124,7 @@
                             </div>
                         </div>
                         <!--  -->
-                        <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web,mobile">
+                        <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web,mobile,project">
                             <img src="image/ui/2022newyear-prototype.png" alt="">
                             <div class="portfolio-prototype-text">
                                 <div class="portfolio-prototype-header-block">
@@ -132,11 +133,13 @@
                                     href="https://xd.adobe.com/view/f270bab7-5b8a-49c6-af86-921e4d6ccec9-a723/">
                                     <img src="image/icon/adobeXD.png">
                                 </a>
-                                <a href="IntroduceUIView/2022-HappyNewYears.html">
-                                    <button class="portfolio-prototype-button">專案介紹</button>
-                                </a>
                                 </div>
                                 <p>是虎年為了感謝客戶一直以來的信任與支持，祝福新年快樂，因此特別設計，準備了一個獨特的版面。</p>
+                            </div>
+                            <div class="portfolio-prototype-project">
+                                <a href="IntroduceUIView/2022-HappyNewYears.html"  class="portfolio-prototype-button">
+                                   專案介紹
+                                </a>
                             </div>
                         </div>
                         <!--  -->
@@ -331,6 +334,9 @@
 
         <!-- 平面設計 -->
         <div class="portfolio-graphicDesign-area section" id="menu4">
+            <div>        
+                <h4>平面設計</h4>
+            </div>
             <!--  -->
             <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area1 graphicDesignSection"
                 id="graphicDesign1" style="background: #9cc1b7;">
